force-app/main/default/objects/TriggerSettings__c/fields/DeferredJobCronPrefix__c.field-meta.xml
<CustomField>
    <fullName>DeferredJobCronPrefix__c</fullName>
    <description>This field defines the prefix for scheduled deferred jobs. If not set, the system will use the default value (ProcessDeferredJobs_) defined in the DeferredJobProcessor class.</description>
    <inlineHelpText>Prefix used when scheduling deferred jobs via the cron scheduler.</inlineHelpText>
    <label>Deferred Job Cron Prefix</label>
    <length>255</length>
    <type>Text</type>
</CustomField>