force-app/main/default/objects/TriggerSettings__c/fields/IsMetricsEnabled__c.field-meta.xml
<CustomField>
    <fullName>IsMetricsEnabled__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Enables or disables the collection of trigger execution metrics. When enabled, system performance data related to triggers will be logged.</description>
    <inlineHelpText>Determines whether trigger execution metrics are collected for performance monitoring.</inlineHelpText>
    <label>Metrics Enabled</label>
    <type>Checkbox</type>
</CustomField>