force-app/main/default/objects/TriggerSettings__c/fields/MinimumScheduleIntervalMinutes__c.field-meta.xml
<CustomField>
    <fullName>MinimumScheduleIntervalMinutes__c</fullName>
    <description>Specifies the minimum time interval between scheduled deferred jobs to prevent excessive job scheduling. If left blank, the system will default to 5 minutes.</description>
    <inlineHelpText>Defines the minimum interval (in minutes) between scheduled deferred jobs. Defaults to 5 minutes if not set.</inlineHelpText>
    <label>Minimum Schedule Interval Minutes</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>